modified index file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<meta name="description" content="Vidhya Sagar E Full Stack Developer Who Loves To Build Application With Java"> 
 		<meta property="og:title" content="About Vidhya Sagar E"/>
-		<meta property="og:url" content="https://akash2k011/" />
+		<meta property="og:url" content="" />
 		<meta property="og:description" content="About Vidhya Sagar E QA Automation Test Engineer">
 		<meta property="og:image" content="/image.png"/> 
 		<meta property="og:type" content=”Portfolio” />
